Fix action buttons wrapping

--- a/src/styles/Rup.scss
+++ b/src/styles/Rup.scss
@@ -134,6 +134,23 @@
         border-right: 0px;
       }
     }
+    &__btns {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: flex-end;
+      width: 100%;
+
+      &__buttons {
+        width: 100%;
+        max-width: 400px;
+        display: flex;
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+        grid-row-gap: 10px;
+        grid-column-gap: 10px;
+      }
+    }
   }
 
   &__contents {
@@ -168,11 +185,11 @@
       &:hover {
         font-weight: bold;
         color: $primary-color;
-        text-decoration: none; 
+        text-decoration: none;
       }
       &--active {
         font-weight: bold;
-        text-decoration: none; 
+        text-decoration: none;
         color: $primary-color;
         border-left: 3px solid $accent-color;
         border-radius: 1px;
@@ -274,7 +291,7 @@
     &__note {
       margin-top: 10px;
       color: #999999;
-  
+
       > form {
         margin: 5px 0;
       }
